<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="profile_title">나의 파프리카</string>
    <string name="profile_username">가나다</string>
    <string name="profile_user_location">군자동</string>
    <string name="profile_paprika_pay">파프리카페이</string>
    <string name="profile_paprika_pay_info">중고거래는 이제 파프리카페이로 해보세요!</string>
    <string name="profile_sales_history">판매내역</string>
    <string name="profile_purchase_history">구매내역</string>
    <string name="profile_watchlist">관심목록</string>
    <string name="profile_location_setting">내 동네 설정</string>
    <string name="profile_keyword_notification">키워드 알림</string>
    <string name="profile_cashbook">파프리카 가계부</string>
    <string name="profile_news_post_comment">동네생활 글/댓글</string>
    <string name="profile_news_ad">동네홍보 글</string>
  <string name="app_name">파프리카 마켓</string>
  <string name="chat_nav_home">홈</string>
  <string name="chat_nav_news">동네생활</string>
  <string name="chat_nav_nearby">내 근처</string>
  <string name="chat_nav_chat">채팅</string>
  <string name="chat_nav_profile">나의 당근</string>
  <string name="main_title">군자동</string>
  <string name="main_product_1">에어팟 프로</string>
  <string name="main_product_desc_1">9/31일 구매한 \n한달도 안된 제품이빈다. \n박풀 S급입니다.</string>
  <string name="main_product_time_1">군자동 3초 전</string>
  <string name="main_product_2">바이레도 블랑쉬 50ml</string>
  <string name="main_product_desc_2">ㅁㄴㅇㅁㄴㅇㅁㄴ</string>
  <string name="main_product_time_2">광진구 구의제3동 26초 전</string>
  <string name="main_menu_home">홈</string>
  <string name="main_menu_town">동네생활</string>
  <string name="main_menu_place">내 근처</string>
  <string name="main_menu_chat">채팅</string>
  <string name="main_menu_carrot">나의 당근</string>
  <string name="main_post_1">맥주마실 사람~~</string>
  <string name="main_post_desc_1">쪽지주지마세요 ㄱㄱ!!</string>
  <string name="main_post_place_1">화양동</string>
  <string name="main_post_time_1">3분 전</string>
  <string name="main_post_2">글 2</string>
  <string name="main_post_desc_2">asd ㄱㄱ!!</string>
  <string name="main_post_place_2">화양동</string>
  <string name="main_post_time_2">3분 전</string>
  <string name="near_tb_name">군자동</string>
  <string name="near_btn_restaurant">음식점</string>
  <string name="near_btn_hobby">취미</string>
  <string name="near_btn_cafe">카페</string>
  <string name="near_btn_more">더보기</string>
  <string name="near_btn_pet">동물</string>
  <string name="near_btn_gym">운동</string>
  <string name="near_btn_clean">청소</string>
  <string name="near_fold">접기</string>
  <string name="near_tv_store">우리동네 가게소식</string>
  <string name="near_tab_restaurant">음식·카페</string>
  <string name="near_tab_health">건강</string>
  <string name="near_tab_life">생활</string>
  <string name="near_tab_all">전체</string>
  <string name="near_restaurant_name">스타벅스 군자점</string>
  <string name="near_restaurant_open">영업시간\n오전 7:00 ~ 오후 10:00</string>
  <string name="near_restaurant_description">매장 내 식사·드라이브 스루 매장</string>
  <string name="near_restaurant_event">겨울 e-프리퀀시 이벤트 시작!\n11월 2일부터 12월 31일까지 60일간, 스타벅스플래너 3종과 \n스타벅스 라미 스페셜 에디션, 2024 스타벅스 캘린더를 만나보세요.</string>
  <string name="near_health_name">휘트니스 군자점</string>
  <string name="near_health_open">영업시간\n오전 5:30 ~ 오후 11:00</string>
  <string name="near_health_description">7년 이상 운영 중</string>
  <string name="near_health_event">7주년 기념 특가 EVENT!\nPT, 필라테스, 요가, 에어로빅 프로그램 완비 \n헬스 12개월 33만원부터 (리뷰작성시 회원권 10일 추가 이벤트 중!)</string>
  <string name="near_life_name">이마트 군자점</string>
  <string name="near_life_open">영업시간\n오전 10:00 ~ 오후 10:00</string>
  <string name="near_life_description">매주 둘째주,넷째주 수요일 휴무</string>
  <string name="near_life_event">설렘 가득한 연말 홈파티!\n스테이크부터 딸기까지 최대 30% 할인 \n하나의 가격 두 개의 상품! 최대 1+1 일상용품 혜택를 만나보세요.</string>
  <string name="near_store_all_restaurant">스타벅스 군자점\n영업시간 오전 7:00 ~ 오후 10:00\n겨울 e-프리퀀시 이벤트 시작!</string>
  <string name="near_store_all_health">휘트니스 군자점\n영업시간 오전 5:30 ~ 오후 11:00\n7주년 기념 특가 EVENT!</string>
  <string name="near_store_all_life">이마트 군자점\n영업시간 오전 10:00 ~ 오후 10:00\n설렘 가득한 연말 홈파티!</string>
  <string name="near_tv_class">동네에서 느끼는 배움의 즐거움</string>
  <string name="near_btn_recomend">추천순</string>
  <string name="near_btn_kfood">한식</string>
  <string name="near_btn_snack">분식</string>
  <string name="near_btn_chicken">치킨</string>
  <string name="near_btn_etc">기타</string>
  <string name="near_food_chicken_name">치킨매니아 군자점</string>
  <string name="near_food_chicken_open">영업시간 \n오후 15:00 ~ 오전 2:00</string>
  <string name="near_food_chicken_description">쿠폰 사용 가능 매장</string>
  <string name="near_food_tteokbokki_name">엽기떡볶이 군자점</string>
  <string name="near_food_tteokbokki_open">영업시간 \n오후 12:00 ~ 오전 12:00</string>
  <string name="near_food_tteokbokki_description">바로 결제 가능 매장</string>
  <string name="chat_title">채팅</string>
  <string name="chat_location1">XX동</string>
  <string name="chat_time1">1주 전</string>
  <string name="chat_message1">감사합니다! 조심히가세요!</string>
  <string name="chat_location2">XX동</string>
  <string name="chat_message2">좋은 거래 했습니다!</string>
  <string name="chat_time2">2주 전</string>
  <string-array name="languages">
    <item>한국어</item>
    <item>English</item>
  </string-array>
  <string name="change_language_button">언어 변경</string>
</resources>
