<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TownActivity">

  <TextView
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="28dp"
          android:text="@string/main_title"
          android:textSize="20sp"
          android:textStyle="bold"
          android:lineSpacingExtra="6sp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="12dp"
          android:layout_marginStart="16dp"
          android:gravity="top"
  />
  <ImageView
          android:id="@+id/iv_tab"
          android:layout_width="14dp"
          android:layout_height="14dp"
          android:src="@drawable/main_tab"
          app:layout_constraintLeft_toRightOf="@id/tv_title"
          app:layout_constraintTop_toTopOf="@id/tv_title"
          app:layout_constraintBottom_toBottomOf="@id/tv_title"
          android:layout_marginStart="6dp"
  />
  <View
          android:id="@+id/v_line"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_title"
          android:layout_marginTop="12dp"
          android:background="#8C8C8C"
  />

  <ScrollView
          android:layout_width="match_parent"
          android:layout_height="0dp"
          app:layout_constraintTop_toBottomOf="@id/v_line"
          app:layout_constraintBottom_toTopOf="@id/ll_bar"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
  >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
      <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/cl_post1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
      >

        <TextView
                android:id="@+id/tv_product_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/tv_product_address_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_desc_1"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintLeft_toLeftOf="@id/tv_product_title_1"
                app:layout_constraintTop_toBottomOf="@id/tv_product_title_1"
                android:layout_marginTop="4dp"
        />

        <TextView
                android:id="@+id/tv_product_address_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_place_1"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintLeft_toLeftOf="@id/tv_product_address_1"
                app:layout_constraintTop_toBottomOf="@id/tv_product_address_1"
                android:layout_marginTop="4dp"
        />

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_time_1"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_product_address_2"
        />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_product_address_2"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="#EEEEEE"
                android:layout_marginTop="16dp"
        />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/cl_post2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
      >

        <TextView
                android:id="@+id/tv_product_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/tv_product_address_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_desc_2"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintLeft_toLeftOf="@id/tv_product_title_2"
                app:layout_constraintTop_toBottomOf="@id/tv_product_title_2"
                android:layout_marginTop="4dp"
        />

        <TextView
                android:id="@+id/tv_product_address_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_place_2"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintLeft_toLeftOf="@id/tv_product_address_3"
                app:layout_constraintTop_toBottomOf="@id/tv_product_address_3"
                android:layout_marginTop="4dp"
        />

        <TextView
                android:id="@+id/tv_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_post_time_2"
                android:textSize="12sp"
                android:textColor="#8C8C8C"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_product_address_4"
        />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_product_address_4"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="#EEEEEE"
                android:layout_marginTop="16dp"
        />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
          android:id="@+id/ll_bar"
          android:layout_width="match_parent"
          android:layout_height="58dp"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:gravity="center"
          android:baselineAligned="false"
  >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="42dp"
            android:clickable="true"
    >
      <ImageView
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:src="@drawable/town_home"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
      />
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_menu_home"
              android:textSize="12sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="42dp"
            android:clickable="true"
    >
      <ImageView
              android:layout_width="23dp"
              android:layout_height="24dp"
              android:src="@drawable/town_news"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
      />
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_menu_town"
              android:textSize="12sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="42dp"
            android:clickable="true"
    >
      <ImageView
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:src="@drawable/main_point"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
      />
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_menu_place"
              android:textSize="12sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="42dp"
            android:clickable="true"
    >
      <ImageView
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:src="@drawable/main_msg"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
      />
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_menu_chat"
              android:textSize="12sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="42dp"
            android:clickable="true"
    >
      <ImageView
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:src="@drawable/main_my"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
      />
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_menu_carrot"
              android:textSize="12sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>