<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NearFoodActivity">

    <LinearLayout
        android:id="@+id/topbarView"
        style="@style/Widget.MaterialComponents.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="#00ff0000"
            android:backgroundTint="#00ff0000"
            android:drawableLeft="@drawable/near_tb_back"
            android:paddingLeft="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_btn_restaurant"
            android:textSize="17sp" />

    </LinearLayout>


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/topbarView">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/near_iv_radius"
                android:drawableEnd="@drawable/near_tb_expandmore"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:textColor="@color/black"
                android:text="@string/near_btn_recomend" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/near_iv_radius"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:textColor="@color/black"
                android:text="@string/near_btn_kfood" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/near_iv_radius"
                android:textColor="@color/black"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/near_btn_snack" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/near_iv_radius"
                android:textColor="@color/black"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/near_btn_chicken" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/near_iv_radius"
                android:textColor="@color/black"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/near_btn_etc" />

        </LinearLayout>
        </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_store"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_store">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/store_food_chicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#EAE5E5"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-43dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/iv_food_chicken"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#00ff0000"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/near_food_chicken" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_food_chicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/near_food_chicken_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_food_chicken_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_chicken"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_food_chicken_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/near_food_chicken_open"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_chicken"
                    app:layout_constraintTop_toBottomOf="@+id/tv_food_chicken_description" />

                <TextView
                    android:id="@+id/tv_food_chicken_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/near_food_chicken_description"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_food_chicken_open"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_chicken"
                    app:layout_constraintTop_toBottomOf="@+id/tv_food_chicken" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/store_food_tteokbokki"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="#EAE5E5"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/store_food_chicken"
                tools:layout_editor_absoluteX="-43dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/iv_food_tteokbokki"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#00ff0000"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/near_food_tteokbokki" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_food_tteokbokki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/near_food_tteokbokki_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_food_tteokbokki_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_tteokbokki"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_food_tteokbokki_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/near_food_tteokbokki_open"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_tteokbokki"
                    app:layout_constraintTop_toBottomOf="@+id/tv_food_tteokbokki_description" />

                <TextView
                    android:id="@+id/tv_food_tteokbokki_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/near_food_tteokbokki_description"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_food_tteokbokki_open"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_food_tteokbokki"
                    app:layout_constraintTop_toBottomOf="@+id/tv_food_tteokbokki" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>